syntax = "proto3";

package microshopping;

option go_package = "./proto;microshopping";

// -----------------Cart service-----------------

// Interface
service CartService {
    rpc AddItem(AddItemRequest) returns (Empty) {}
    rpc GetCart(GetCartRequest) returns (Cart) {}
    rpc EmptyCart(EmptyCartRequest) returns (Empty) {}
}

message CartItem {
    string product_id = 1;
    int32  quantity = 2;
}

message AddItemRequest {
    string user_id = 1;
    // referencing the product above
    CartItem item = 2;
}

message EmptyCartRequest {
    string user_id = 1;
}

message GetCartRequest {
    string user_id = 1;
}

message Cart {
    string user_id = 1;
    // Cart items slice
    repeated CartItem items = 2;
}

// Empty Cart Message
message Empty {}
